# RobotSoccer

./: BodyOfFacts.docx  CMakeLists.txt  README.md  controller_home.m  controller_home.m~  robot_soccer_sim.slx  robot_soccer_sim.slx.autosave
ODROIDCODE/catkin_ws/devel/lib/pkgconfig/: motionControl.pc
ODROIDCODE/catkin_ws/devel/share/motion/cmake/: motionConfig.cmake
ODROIDCODE/catkin_ws/src/motionControl/: CMakeLists.txt
ODROIDCODE/catkin_ws/src/motionControl/scripts/: .calibrationpid.py.swp  calibrationpid.py  control.py  forceStop.py  mat.py  reset.py  roboclaw.py  serialTester.py  skillTest1.py  stopWheels.py  velchange.py
ODROIDCODE/catkin_ws/src/pythonTutorials/: CMakeLists.txt  package.xml
ODROIDCODE/catkin_ws/src/pythonTutorials/scripts/: control.py  listener.py  mat.py  roboclaw.py  stopWheels.py  testWheels.py  velchange.py
PCCode/catkin_ws/devel/: .catkin  _setup_util.py
PCCode/catkin_ws/devel/lib/Vision/: RedTrackingDemo  Vision  talker
PCCode/catkin_ws/devel/lib/artifIntell/: listener
PCCode/catkin_ws/devel/lib/beginner_tutorials/: listener  talker
PCCode/catkin_ws/devel/lib/pkgconfig/: artifIntell.pc  beginner_tutorials.pc  motion.pc  pythonTutorials.pc  vision.pc
PCCode/catkin_ws/devel/lib/vision/: talker
PCCode/catkin_ws/devel/share/Vision/cmake/: VisionConfig.cmake
PCCode/catkin_ws/devel/share/artifIntell/cmake/: artifIntellConfig.cmake
PCCode/catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
PCCode/catkin_ws/devel/share/motionControl/cmake/: motionControlConfig.cmake
PCCode/catkin_ws/devel/share/pythonTutorials/cmake/: pythonTutorialsConfig.cmake
PCCode/catkin_ws/devel/share/vision/cmake/: visionConfig.cmake
PCCode/catkin_ws/src/Vision/: CMakeLists.txt
PCCode/catkin_ws/src/Vision/src/: CMakeCache.txt  Makefile  cmake_install.cmake  multipleObjectTracking (copy).cpp  multipleObjectTracking.cpp
PCCode/catkin_ws/src/build-vision-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  vision.cbp
PCCode/catkin_ws/src/build-vision-Desktop-Default/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  setup_cached.sh
PCCode/catkin_ws/src/build-vision-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
PCCode/catkin_ws/src/build-vision-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
matlab/: Thumbs.db  controller_away.m  controller_home.asv
src/: multipleObjectTracking.cpp
testOpenCV/: CMakeCache-old.txt  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Fruit.cpp  Fruit.h  Makefile  RedDetectingDemo  RedDetectingDemo.cpp  RedTrackingDemo.cpp  backgroundsub  backgroundsub.cpp  calibrating  calibrating.cpp  camshift  camshift.cpp  center  center.cpp  circle  circle.cpp  circle2  circle2.cpp  cmake_install.cmake  contour  contour.cpp  control.py  histo  histo.cpp  kalman.cpp  multipleObjectTracking before hue only.cpp  multipleObjectTracking.cpp  multipleObjectTrackingbeforebackgroundsubtracting.cpp  multipleObjectTrackingrightrightbefore.cpp  rosvis.cpp  selection  selection.cpp  threshholding.py
testOpenCV/CMakeFiles-old/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
testOpenCV/CMakeFiles-old/DisplayImage.dir/: CXX.includecache  DependInfo.cmake  depend.internal
testOpenCV/CMakeFiles-old/RedDetectingDemo.dir/: CXX.includecache  cmake_clean.cmake  link.txt
testOpenCV/CMakeFiles-old/RedTrackingDemo.dir/: CXX.includecache  DependInfo.cmake  build.make
testOpenCV/CMakeFiles-old/multipleObjectTracking.dir/: CXX.includecache  DependInfo.cmake  build.make  depend.internal  depend.make  link.txt
testOpenCV/CMakeFiles-old/threshholding.dir/: DependInfo.cmake  cmake_clean.cmake  link.txt
testOpenCV/VK/: Ball.cpp  CMakeCache.txt  CMakeLists.txt  ComputerVision.cpp  ComputerVision.h  Makefile  Robot.cpp  cal  cmake_install.cmake  computer_vision  default.xml  out_camera_data_good.yaml  settings.data  webcam_undistort.cpp
testOpenCV/VK/oldsrc/: ComputerVision.cpp
testOpenCV/VK/src/: CMakeCache.txt  CMakeLists.txt  Camera_Calibration  Makefile  cmake_install.cmake  webcam_undistort.cpp
testOpenCV/VK/src/catkin_generated/: generate_cached_setup.py  setup_cached.sh
testOpenCV/VK/src/devel/: .catkin  .rosinstall  setup.sh
(+6 files in other folders)
